# FozruciX

./: .gitignore  FozruciCS.sln  LICENSE  build.gradle  pom.xml  settings.gradle  sharpen-all-options
FozruciCS/: DebugWindow.cs  DiscordAdapter.cs  FozConfig.cs  FozruciCS.csproj  FozruciX.cs  packages.config
FozruciCS/Console/: CMD.cs  CommandLine.cs
FozruciCS/DataStructs/: DiscordData.cs  Meme.cs  Note.cs  SaveDataStore.cs
FozruciCS/M68K/: M68kSim.cs
FozruciCS/Math/: ArbitraryPrecisionEvaluator.cs
M68k/: CMakeLists.txt
M68k/M68KSimulator/: Address.cpp  Address.h  AddressSpace.cpp  AddressSpace.h  M68KSimulator.cpp  M68KSimulator.h  Ram.cpp  Ram.h  Rom.cpp  Rom.h  Rom.hpp
M68k/M68KSimulator/Exceptions/: AddressException.cpp  AddressException.h  BusException.cpp  BusException.h  CHKInstructionException.cpp  CHKInstructionException.h  ErrorException.cpp  ErrorException.h  IllegalInstructionException.cpp  IllegalInstructionException.h  Line1010EmulatorException.cpp  Line1010EmulatorException.h  Line1111EmulatorException.cpp  Line1111EmulatorException.h  PrivilegeViolationException.cpp  PrivilegeViolationException.h  TRAPVException.cpp  TRAPVException.h  TraceException.cpp  TraceException.h  ZeroDivideException.cpp  ZeroDivideException.h
Tests/: SineWaveTest.java
jni/: com_LilG_Com_FozruciX.h
src/: CommandLine.java  DNDEvent.java  DNDFamiliar.java  DNDPlayer.java  DebugWindow.java  Dungeon.java  ExtendedDoubleEvaluator.java  JWKTLParser.java  MyBotX.java  MyBotXMain.java  Note.java  RPSGame.java  YARN.java  runCMD.java  saveDataStore.java
(+177 files in other folders)
